<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    
        <com.nwice.card.preference.SummarizedListPreference 
            android:key="settings_deck"
            android:title="@string/settings_deck" 
        	android:entries="@array/settings_deck_types"
        	android:entryValues="@array/settings_deck_types"
        	android:defaultValue="@string/settings_deck_default"	         
        />              

        <com.nwice.card.preference.SummarizedListPreference 
            android:key="settings_login"
            android:title="@string/settings_login" 
        	android:entries="@array/settings_login_types"
        	android:entryValues="@array/settings_login_types"
        	android:defaultValue="@string/settings_login_default"	         
        />
        
		<CheckBoxPreference 		    
		    android:key="settings_connect"
            android:title="@string/settings_connect"
            android:summary="@string/settings_connect_summary"
            android:defaultValue="@string/settings_connect_default"
            />        
        
		<CheckBoxPreference 
		    android:key="settings_sound"
            android:title="@string/settings_sound"
            android:summary="@string/settings_sound_summary"
            android:defaultValue="@string/settings_sound_default"
            />

		<CheckBoxPreference 
            android:key="settings_explicit"
            android:title="@string/settings_explicit"
            android:summary="@string/settings_explicit_summary"
            android:defaultValue="@string/settings_explicit_default"
            />		

</PreferenceScreen>
   
   
