<menu xmlns:android="http://schemas.android.com/apk/res/android">

	<item
        android:id="@+id/menu_games"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:title="@string/menu_games"
        />

	<item
        android:id="@+id/menu_connect"
        android:orderInCategory="101"
        android:showAsAction="ifRoom"
        android:title="@string/menu_connect"
        />	
    
    <item
        android:id="@+id/menu_login"
        android:orderInCategory="102"
        android:showAsAction="ifRoom"
        android:title="@string/menu_login"
        />    
    
    <item 
        android:id="@+id/menu_settings" 
        android:orderInCategory="103" 
        android:showAsAction="never" 
        android:title="@string/menu_settings"         
    />
    
</menu>
