<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"    
    android:keepScreenOn="true"
   	tools:context=".MainActivity"
    >
    
    <TextView
        android:id="@+id/blackjack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"        
        android:clickable="true"
        android:onClick="blackjack"
        android:text="@string/blackjack"
        />    
    
    <TextView
        android:id="@+id/deck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/blackjack"
        android:clickable="true"
        android:onClick="deck"
        android:text="@string/deck"
        />    

    <TextView
        android:id="@+id/war"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/deck"
        android:clickable="true"
        android:onClick="war"
        android:text="@string/war"
        />
    
</RelativeLayout>
